<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="50dp"
  tools:context="com.powerrangers.todo.EditTaskActivity"
  tools:layout_editor_absoluteY="89dp"
  tools:layout_editor_absoluteX="0dp">

  <EditText
    android:id="@+id/edit_task_name_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:hint="@string/task_name_hint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

  <EditText
    android:id="@+id/edit_task_date_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:focusable="false"
    android:hint="@string/task_date_hint"
    app:layout_constraintHorizontal_bias="0.36"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_task_name_input"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

  <EditText
    android:id="@+id/edit_task_time_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:focusable="false"
    android:hint="@string/task_time_hint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_task_date_input" />

  <Button
    android:id="@+id/edit_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="29dp"
    android:onClick="submitEditTask"
    android:text="@string/edit_task_submit"
    app:layout_constraintHorizontal_bias="0.537"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/delete_button"
    app:layout_constraintTop_toBottomOf="@+id/edit_task_time_input" />

  <Button
    android:id="@+id/delete_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="29dp"
    android:onClick="submitDeleteTask"
    android:text="@string/delete_task_submit"
    app:layout_constraintHorizontal_bias="0.818"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_task_time_input" />

</android.support.constraint.ConstraintLayout>
